@@ -76,6 +76,14 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="45~rc" date="2023-09-02" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 45.rc</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="45.0" date="2023-08-16" type="stable">
       <description>
         <p>Overview of changes in gnome-calculator 45.0</p>
