@@ -1,3 +1,6 @@
+Overview of changes in gnome-calculator 45.rc
+    * Updated translations
+
 Overview of changes in gnome-calculator 45.0
     * Updated translations
     * Search provider performance improvements !154, !155, !156 (Christian Hergert)
